--- a/hexlet_django_blog/article/templates/article/article.html
+++ b/hexlet_django_blog/article/templates/article/article.html
@@ -5,7 +5,7 @@
     <title>Article</title>
 </head>
 <body>
-    <p>There will be blood</p>
-    <p>{{ app_name }}</p>
+    <p>Статья номер {{ article_id }}</p>
+    <p>Тег {{ tags }}</p>
 </body>
 </html>
