--- a/hexlet_django_blog/article/templates/article/index.html
+++ b/hexlet_django_blog/article/templates/article/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{  title  }}</title>
-</head>
-<body>
-    <h1>{{  title  }}</h1>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+    <h1>Список статей</h1>
+    {% for article in articles %}
+        <h2>{{ article.name }}</h2>
+        <div>{{ article.body|slice:":200" }}</div>
+    {% endfor %}
+{% endblock %}
