--- a/hexlet_django_blog/article/templates/article/article.html
+++ b/hexlet_django_blog/article/templates/article/article.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Article</title>
-</head>
-<body>
-    <p>Статья номер {{ article_id }}</p>
-    <p>Тег {{ tags }}</p>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+     <h1>{{ article.name }}</h1>
+    <div>{{ article.body }}</div>
+{% endblock %}
