--- a/hexlet_django_blog/article/templates/article/index.html
+++ b/hexlet_django_blog/article/templates/article/index.html
@@ -1,9 +1,17 @@
 {% extends "base.html" %}
 
 {% block content %}
+    {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
     <h1>Список статей</h1>
     {% for article in articles %}
         <h2><a href="{% url 'article' id=article.id %}"> {{ article.name }}</a></h2>
         <div>{{ article.body|slice:":200" }}</div>
     {% endfor %}
+
 {% endblock %}
