--- a/hexlet_django_blog/article/templates/article/index.html
+++ b/hexlet_django_blog/article/templates/article/index.html
@@ -4,14 +4,16 @@
     {% if messages %}
         <ul class="messages">
             {% for message in messages %}
-                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                <li>{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
             {% endfor %}
         </ul>
     {% endif %}
     <h1>Список статей</h1>
+    <a href="{% url 'article_create' %}"> Новая статья</a>
     {% for article in articles %}
         <h2><a href="{% url 'article' id=article.id %}"> {{ article.name }}</a></h2>
         <div>{{ article.body|slice:":200" }}</div>
+        <a href="{% url 'article_update' id=article.id %}">Редактировать</a>
     {% endfor %}
 
 {% endblock %}
