--- a/hexlet_django_blog/article/templates/article/create.html
+++ b/hexlet_django_blog/article/templates/article/create.html
@@ -4,14 +4,14 @@
 {% if messages %}
     <ul class="messages">
         {% for message in messages %}
-            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            <li>{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
         {% endfor %}
     </ul>
 {% endif %}
-{% if form.subject.errors %}
+{% if form.errors %}
 <div>
     <ul>
-    {% for error in form.subject.errors %}
+    {% for error in form.errors %}
         <li><strong>{{ error|escape }}</strong></li>
     {% endfor %}
     </ul>
