add link to article app on the main page

--- a/hexlet_django_blog/templates/index.html
+++ b/hexlet_django_blog/templates/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
     <h1>Hello, {{ who }}!</h1>
+    <h2><a href="{% url 'articles' %}">ПОСМОТРЕТЬ СТАТЬИ</a></h2>
 </body>
 </html>
