--- a/hexlet_django_blog/templates/index.html
+++ b/hexlet_django_blog/templates/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>Hello, {{ who }}!</h1>
-    <h2><a href="{% url 'articles' %}">ПОСМОТРЕТЬ СТАТЬИ</a></h2>
+    <h2><a href="{% url 'article_index' %}">ПОСМОТРЕТЬ СТАТЬИ</a></h2>
 </body>
 </html>
