add delete form to article/index.html

--- a/hexlet_django_blog/article/templates/article/index.html
+++ b/hexlet_django_blog/article/templates/article/index.html
@@ -14,6 +14,11 @@
         <h2><a href="{% url 'article' id=article.id %}"> {{ article.name }}</a></h2>
         <div>{{ article.body|slice:":200" }}</div>
         <a href="{% url 'article_update' id=article.id %}">Редактировать</a>
+        <form method="post" action="{% url 'article_delete' id=article.id %}">
+            {% csrf_token %}
+            <input type="hidden" name="article_id" value="{{ article.id }}">
+            <input type="submit" value="Удалить">
+        </form>
     {% endfor %}
 
 {% endblock %}
